# vega-sentinel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: ethics-and-scope.md
examples/reports/: example.md
scripts/: verify.py
src/vega_sentinel/: cli.py
tests/: test_parser.py
