[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vega-sentinel"
version = "0.1.0"
description = "Authorized web audit engine for public technical signals."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vega-Starboard" }]
dependencies = []

[project.scripts]
vega-sentinel = "vega_sentinel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
